Added UserLogin and Registration added Swagger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,26 @@ spring.datasource.username=Abhay
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
+# Enable H2 Console
 spring.h2.console.enabled=true
+
+#Custom H2 Consloe URl
 spring.h2.console.path=/console
+
+# SMTP Configuration
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=abhay.goyal_cs21@gla.ac.in
+spring.mail.password=bghh hpye mkvm msha
+spring.mail.properties.mail.smtp.auths=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# Swagger
+springdoc.swagger-ui.path=/swagger
+
+
+# For local database
+#spring.datasource.url=jdbc:h2:file:C:/Users/Abhay
+#spring.jpa.hibernate.ddl-auto=update
+
